[package]
name = "videosimilarity"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-sidecar = "2.0.5"
anyhow = "1.0"
image = { version = "0.25.5", default-features = false, features = ["png"] }
image_hasher = "2.0"

[profile.dev]
opt-level = 3
debug-assertions = false # For some reason debug assertions cause a massive slowdown